<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:layout_weight="7"
    android:layout_marginBottom="2dp"
    android:padding="15dp"
    android:baselineAligned="false">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imageViewArticleFavorite"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/galleryImageDescription" />

        <ImageButton
            android:id="@+id/imageButtonDelete"
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_favorite_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="7" >


        <TextView
            android:id="@+id/textViewTitleFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#000"
            android:shadowRadius="1.0"
            android:textColor="#666666"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:text="@string/newsTitle" />

        <TextView
            android:id="@+id/textViewTitleDescriptionFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#777777"
            android:textSize="16sp"
            android:maxLines="2"
            android:minLines="2"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:text="@string/newsDescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAuthorFavorite"
                    android:textSize="15sp"
                    android:textColor="#42A5F5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newsAuthor"/>

            </LinearLayout>


            <TextView
                android:id="@+id/textViewTimeFavorite"
                android:gravity="end"
                android:textSize="14sp"
                android:textColor="#42A5F5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsTime" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
